back seo tag and jekyll-seo-tag

--- a/gui/landing/_config.yml
+++ b/gui/landing/_config.yml
@@ -1,7 +1,4 @@
-
-
 title: GURU Network – The AI Orchestration Network
-description: "GURU Network"
 author:
   name: guru_network
   email: evgeny@dex.guru
@@ -10,9 +7,9 @@ author:
 # If you want to omit the line-break after the end of text, use `>-` instead.
 
 # Build settings
-url: "https://gurunetwork.ai"
-#plugins:
-#  - jekyll-seo-tag
+
+plugins:
+  - jekyll-seo-tag
 #   - jekyll-feed
 
 partners:
@@ -142,24 +139,3 @@ social_links:
   - { platform: twitter, user_url: "https://twitter.com/xgurunetwork" }
   - { platform: telegram, user_url: "https://t.me/dexguru" }
   - { platform: discord, user_url: "https://discord.gg/dPW8fzwzz9" }
-
-team: 
-  - { name: 'Nick Sawinyh', position: 'CEO', description: 'Blockchain expert since 2017, Co-founder of Defiprime, Key Opinion Leader (KOL), CEO of DexGuru', img: 'ns'}
-  - { name: 'Evgeny Vakhteev', position: 'CTO', description: 'Ex Hulu, Disney (video ingestions orchestration), CTO and Cofounder of DexGuru', img: 'ev' }
-  - { name: 'Alexey Volynshikov', position: 'Senior Backend Engineer', description: 'Architected DexGuru Data Warehouse, indexation pipelines, co authored Guru Network orchestration architecture.', img: 'av' }
-  - { name: 'Evgeny Shestakov', position: 'Backend Engineer', description: 'Developers Office Lead, indexation, price calculations and Web3', img: 'es' }
-  - { name: 'Rodion Kharabet', position: 'Senior Frontend Engineer', description: 'Developed DexGuru MVP, Web3 wallets integrations, and led all DexGurufrontend teams', img: 'rk' }
-  - { name: 'Alexey Ilin', position: 'Frontend Engineer', description: 'Created pixel-perfect GUIs for DexGuru, Block Explorer, and Warehouse applications', img: 'ai' }
-  - { name: 'Gennady Omyshev', position: 'UI/UX Designer', description: 'All Guru applications, focusing on user experience and Web3 mechanics', img: 'go' }
-  - { name: 'Evgeny Sudlenkov', position: 'Lead DevOps Engineer', description: 'The hero behind our own Data Center', img: 'il' }
-  - { name: 'Ivan Lylov', position: 'Manual/Automated QA', description: 'Specified regression test cases, executed manual and automated tests for DexGuru products', img: 'il' }
-  - { name: 'Roman', position: 'Head of Community', description: "Guru Network's community alchemist and marketing aficionado, transforming engagement into $GURU", img: 'rm' }
-
-partners2: 
-  - {key: chainlink, url: https://chain.link/}
-  - {key: telcoin, url: https://www.telco.in/ }
-  - {key: uncx, url: https://uncx.network/}
-  - {key: paraswap, url: https://www.paraswap.io/}
-#  - {key: 3baseio, url: https://3base.org/ }
-  - {key: kybernetwork, url: https://kyber.network/}
-  - {key: crossfi, url: https://www.crossfimain.com/}
