--- a/engine/src/main/resources/application.properties
+++ b/engine/src/main/resources/application.properties
@@ -33,6 +33,8 @@ inscription.rpcUrl=${INSCRIPTIONS_RPC_URL:http://node-canto-testnet-01.dexguru.b
 inscription.chainId=${INSCRIPTIONS_CHAIN:261}
 inscription.max_threads=${INSCRIPTIONS_MAX_THREADS:10}
 inscription.maxRetry=${INSCRIPTIONS_MAX_RETRY:3}
+inscription.queue.capacity=${INSCRIPTIONS_QUEUE_CAPACITY:1000}
+
 
 camunda.bpm.job-execution.enabled=${JOB_EXECUTION_ENABLE:true}
 camunda.bpm.job-execution.max-pool-size=${JOB_EXECUTION_MAX_POOL_SIZE:10}
