--- a/engine/src/main/resources/application.properties
+++ b/engine/src/main/resources/application.properties
@@ -28,6 +28,7 @@ engine.rabbitmq.routingkey=${RABBITMQ_ROUTINGKEY:engine.routingkey}
 spring.rabbitmq.virtual-host=${RABBITMQ_VIRTUAL_HOST:/}
 
 inscription.enabled=${INSCRIPTIONS_HISTORY_ENABLED:false}
+inscription.event.types=${INSCRIPTION_HISTORY_EVENT_TYPES:ALL}
 inscription.privateKey=${INSCRIPTIONS_PRIVATEKEY:0000000000000000000000000000}
 inscription.rpcUrl=${INSCRIPTIONS_RPC_URL:http://node-canto-testnet-01.dexguru.biz:8545}
 inscription.chainId=${INSCRIPTIONS_CHAIN:261}
