--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,14 +1,15 @@
 {
   "devDependencies": {
+    "@chainlink/functions-toolkit": "^0.2.5",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "hardhat": "^2.22.6",
     "chai": "<5.0.0",
     "ethers": "^5.7.2",
-    "truffle-debugger": "^5.0.26",
+    "hardhat": "^2.22.6",
     "mocha": "^10.7.0",
-    "@chainlink/functions-toolkit": "^0.2.5"
+    "truffle-debugger": "^5.0.26"
   },
   "dependencies": {
     "@chainlink/contracts": "^0.8.0",
