--- a/external_workers/requirements.txt
+++ b/external_workers/requirements.txt
@@ -3,7 +3,9 @@ pydantic==2.7.0
 web3==6.17.2
 ta==0.11.0
 redis==3.5.3
-
+pydantic-settings==2.2.1
+python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
+eth_typing==4.1.0.
 boto3
 httpx
 openai
