Add docker compose deployment

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,13 +1,12 @@
 # Telegram Bot Settings
-# Bmeme stage
 BOT_TOKEN="bot_key"
-SUPPORT_URL="dex.guru"
+SUPPORT_URL="url"
 RATE_LIMIT=0.5
 DEBUG=True
 # Webhook Server Settings (Optional)
 USE_WEBHOOK=False
 WEBHOOK_HOST="0.0.0.0"  # use "localhost" if not using Docker
-WEBHOOK_PORT=8080
+WEBHOOK_PORT=8081
 WEBHOOK_BASE_URL="https://example.com"
 WEBHOOK_PATH="/webhook"
 WEBHOOK_SECRET="secret"
@@ -16,8 +15,8 @@ WEBHOOK_SECRET="secret"
 FLOW_API="http://localhost:8000"
 FLOW_SYS_KEY="secret"
 
-ENGINE_ADMIN_PREFIX="http://localhost:8000"
-ENGINE_URL="http://localhost:8000/engine-rest"
+ENGINE_ADMIN_PREFIX="http://localhost:8080"
+ENGINE_URL="http://localhost:8080/engine-rest"
 ENGINE_USERNAME="demo"
 ENGINE_PASSWORD="demo"
 ENGINE_USERS_GROUP_ID="camunda-admin"
@@ -34,7 +33,7 @@ POSTHOG_API_KEY=""
 
 # Performance Monitoring System Settings
 PROMETHEUS_PORT=9090
-GRAFANA_PORT=3000
+GRAFANA_PORT=3030
 GRAFANA_ADMIN_USER="admin"
 GRAFANA_ADMIN_PASSWORD="admin"
 
