--- a/flow_api/.env.example
+++ b/flow_api/.env.example
@@ -6,10 +6,10 @@ DEBUG=False
 # Webhook Server Settings (Optional)
 USE_WEBHOOK=False
 WEBHOOK_HOST="0.0.0.0"  # use "localhost" if not using Docker
-WEBHOOK_PORT=8080
+WEBHOOK_PORT=8081
 WEBHOOK_BASE_URL="https://example.com"
 WEBHOOK_PATH="/webhook"
-WEBHOOK_SECRET="Pl7U9AJUFb2"
+WEBHOOK_SECRET="secret"
 
 # Admin Panel Settings
 ADMIN_HOST="0.0.0.0"    # use "localhost" if not using Docker
@@ -38,7 +38,7 @@ POSTHOG_API_KEY=""
 
 # Performance Monitoring System Settings
 PROMETHEUS_PORT=9090
-GRAFANA_PORT=3000
+GRAFANA_PORT=3030
 GRAFANA_ADMIN_USER="admin"
 GRAFANA_ADMIN_PASSWORD="admin"
 
