Add frontend, fix bot, fix readme

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -23,4 +23,6 @@ RUN adduser -D appuser \
 
 USER appuser
 
+ENV PYTHONPATH=${PYTHONPATH}:/usr/src/app
+
 CMD [ "python", "./bot_server/__main__.py" ]
