--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -13,7 +13,7 @@ LANGCHAIN_API_KEY=
 NEXT_PUBLIC_PROJECT_ID=<https://cloud.reown.com/app project id>
 
 
-
+NEXT_PUBLIC_API_HOST="host_url"
 NEXT_PUBLIC_APP_INTRO="Crypto analysis defi trading"
 NEXT_PUBLIC_APP_CURRENCY="TON"
 NEXT_PUBLIC_APP_NAME="Community App"
@@ -24,3 +24,4 @@ NEXT_PUBLIC_APP_NATIVE_TOKEN_SYMBOL=tGURU
 NEXT_PUBLIC_APP_NATIVE_TOKEN_NAME=tGURU
 NEXT_PUBLIC_APP_BLOCK_EXPLORER_URL=https://scan.gurunetwork.ai
 NEXT_PUBLIC_APP_CHAIN_LABEL="Guru Network Testnet"
+NEXT_PUBLIC_APP_COMMUNITY_NFT_ADDRESSES='[]'
