--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "distinct-colors": "^3.0.0",
+    "dotenv": "^16.4.5",
     "downshift": "^9.0.8",
     "fetch-retry": "^6.0.0",
     "isomorphic-dompurify": "^2.15.0",
