adding swagger docs

--- a/engine/src/main/resources/application.properties
+++ b/engine/src/main/resources/application.properties
@@ -61,3 +61,26 @@ mindsdb.url=${MINDS_DB_HOST:http://127.0.0.1:47334}
 mindsdb.openai.api.key=${OPENAI_API_KEY:sk-key}
 openai.api.key=${OPENAI_API_KEY:sk-key}
 rapidApi.api.key=${RAPID_API_KEY:rapid-ke}
+
+# OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.packagesToScan=com.guru.engine.controller,org.camunda.bpm.engine.rest
+springdoc.pathsToMatch=/**
+springdoc.default-consumes-media-type=application/json
+springdoc.default-produces-media-type=application/json
+
+# Serve static OpenAPI specification
+springdoc.swagger-ui.url=/openapi/openapi.json
+springdoc.api-docs.enabled=false
+
+# Static content configuration
+spring.web.resources.static-locations=classpath:/static/
+spring.mvc.static-path-pattern=/**
+spring.web.resources.chain.enabled=true
+spring.web.resources.chain.compressed=true
+spring.web.resources.chain.html-application-cache=true
+
+# Swagger UI configuration
+springdoc.swagger-ui.config-url=/openapi/openapi.json
+springdoc.swagger-ui.disable-swagger-default-url=true
