--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -14,9 +14,9 @@
     <camunda.version>7.19.0</camunda.version>
     <springBoot.version>2.7.9</springBoot.version>
 
-    <maven.compiler.source>1.11</maven.compiler.source>
-    <maven.compiler.target>1.11</maven.compiler.target>
-    <version.java>1.11</version.java>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <version.java>17</version.java>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <failOnMissingWebXml>false</failOnMissingWebXml>
@@ -261,6 +261,11 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.7.0</version>
+    </dependency>
 
   </dependencies>
 
@@ -315,8 +320,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>18</source>
+          <target>18</target>
         </configuration>
       </plugin>
     </plugins>
